--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -23,9 +23,9 @@
 				<div class="col-xl-12 col-lg-12 col-md-14">
 					<div class="top-left d-i-block">
 						<ul>
-							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
-							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk22@gmail.com</li>
+							<li><a href="#"><i class="adress"></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı No:43 İzmit Kocaeli</li>
+							<li><a href="#"><i class="flaticon-call number"></i></a> 0537 329 3216 / 0541 540 9232</li>
+							<li><a href="#"><i class="flaticon-envelope mail"></i></a> safahukuk22@gmail.com</li>
 						</ul>
 					</div>
 				</div>
@@ -65,16 +65,19 @@
 
 	</div>
 	<!-- Header Menu End -->
+<div class="">
 	<div class="bannersami">
-			<img src="../../../assets/img/banner34.jpg" alt="this is the first al">
-				<h1 class="bannertextsami">Hızlı ve Güvenilir Hizmetimizle Daima Yanınızdayız.</h1>
-				<div class="about-buttom d-sm-flex">
-					<div class="about-btn faaliyetsami "> <a class="attoyer-btn all-btn mr-100" href="#Faaliyet" >Faaliyet Alanlarımız</a>
-					</div>
-
+		<img src="../../../assets/img/banner34.jpg" alt="this is the first al">
+			<h1 class="bannertextsami">Hızlı ve Güvenilir Hizmetimizle Daima Yanınızdayız.</h1>
+			<div class="about-buttom d-sm-flex">
+				<div class="about-btn  faaliyetsami "> <a class="attoyer-btn all-btn mr-100" href="#Faaliyet" >Faaliyetlerimiz</a>
 				</div>
-				
+
+			</div>
+			
 	</div>
+</div>
+	
 		
 
 
@@ -109,7 +112,7 @@
 								<p>Safa hukuk bürosu olarak tecrübeli kadromuzla hizmetinizdeyiz. 25 yıllık tecrübemiz ve kazanma alışkanlığımızın yanı sıra kaliteli hizmeti uygun fiyatlandırma politikamızla sizlere sunuyoruz.</p>
 								<p class="pt-30 pb-35"></p>
 								<div class="about-buttom d-sm-flex">
-									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#Ulasin">Bize Ulaşın</a>
+									<div class="about-btn ulas"> <a class="attoyer-btn all-btn mr-100" href="#Ulasin">Bize Ulaşın</a>
 									</div>
 
 								</div>
@@ -127,7 +130,7 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-xl-7 col-lg-6 col-md-12 md-mb-30">
-					<div class="section-title-left">
+					<div class="section-title-left destek">
 						<h2>Her zaman yanınızdayız.</h2>
 					</div>
 				</div>
@@ -136,7 +139,7 @@
 						<div class="solution-icon">
 							<div class="icon"><i class="flaticon-call"></i>
 							</div>
-							<div class="solution-number">
+							<div class="solution-number destek">
 								<p>0537 329 3216 / 0541 540 9232</p>
 							</div>
 						</div>
@@ -151,7 +154,7 @@
 	<div class="services-area section-padding">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-12 col-lg-12">
+				<div class="col-xl-12 col-lg-12 service-sami">
 					<div class="section-title"> <span class="section-top"></span>
 						<a name="Faaliyet"><h2>Faaliyet Alanlarımız</h2></a>
 					</div>
@@ -160,16 +163,17 @@
 		</div>
 
 <!-- Slider denemesi-->
- <div class="container">
+
+<!-- Slider denemesi-->
+<div class="container">
 	<div class="row card-row-size">
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/aile.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
-
-					<h4 class="card-text-style" style="color: white">
+						<h4 class="card-text-style" style="color: white">
 						Aile Hukuku
 					</h4>
 				  </div>
@@ -177,7 +181,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/ceza.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -191,7 +195,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/dernekler.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -206,7 +210,7 @@
 		</div>
 	</div>
 	<div class="row card-row-size">
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/sirketler.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -219,7 +223,7 @@
 				  </div>
 			</div>
 		</div>
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/blog-7.png" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -232,7 +236,7 @@
 				  </div>
 			</div>
 		</div>
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/gayri.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -249,7 +253,7 @@
 		
 	</div>
 	<div class="row card-row-size">
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/borclar.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -263,7 +267,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/kamulastirma.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -277,7 +281,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -292,7 +296,7 @@
 		</div>
 	</div>
 	<div class="row card-row-size">
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/icra.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -306,7 +310,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/yabancilar.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -320,7 +324,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/tuketici.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -337,7 +341,7 @@
 
 	<div class="row card-row-size">
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -351,7 +355,7 @@
 			</div>
 		</div>
 
-		<div class="col-md ">
+		<div class="col-md card-padding">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/idari.jpeg" alt="Card image cap"  >
 				<div class="card-img-overlay">
@@ -386,6 +390,9 @@
  </div>
 
 
+
+
+<!--
 
 
 <!--
