--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
 	<!-- Top Bar Start -->
 
 
-	<div class="top-bar">
+	<!-- <div class="top-bar">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-xl-12 col-lg-12 col-md-14">
@@ -32,7 +32,7 @@
 
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Top Bar End -->
 	<!-- Header Menu Start -->
 	<div class="header-menu">
