--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
 	</div> -->
 	<!-- Preloader end -->
 	<!-- Top Bar Start -->
-	<div class="top-bar">
+	<!-- <div class="top-bar">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-xl-12 col-lg-12 col-md-14">
@@ -26,7 +26,7 @@
 
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!-- Top Bar End -->
 	<!-- Header Menu Start -->
 	<div class="header-menu">
