minor fix email

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -529,7 +529,7 @@
 						<div class="from-area">
                             <form ngNoForm [action]="url" method="POST" target="_blank" >
 								<input type="hidden" name="_captcha" value="false">
-								<input type="hidden" name="_next" value="http://localhost:4200/contact">
+								<input type="hidden" name="_next" value="https://safahukuk.org/contact">
 									<div class="form-row">
 										<div class="form-group col-md-6">
 											<input name="isim" type="text" class="form-control" id="fullName" placeholder="İsim" required oninvalid="this.setCustomValidity('Lutfen Adinizi giriniz')" >
