title set added

--- a/hukuki/src/app/contact/contact.component.html
+++ b/hukuki/src/app/contact/contact.component.html
@@ -91,7 +91,7 @@
 				<div class="col-xl-4 col-lg-4 col-md-6 sm-mb-30">
 					<div class="contact-item">	<i class="flaticon-envelope"></i>
 						<h3 class="pt-20 pb-20">Email</h3>
-						<p>safahukuk@yahoo.com</p>
+						<p>safahukuk22@gmail.com</p>
 
 					</div>
 				</div>
