--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -35,6 +35,27 @@
 	</div> -->
 	<!-- Top Bar End -->
 	<!-- Header Menu Start -->
+
+	<head>
+		<meta charset="utf-8">
+		<title>Safa Hukuk</title>
+		<meta name="description" content="Safa Hukuk" />
+  		<base href="/">
+  		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="keywords" content="Creative, Digital, multipage, landing, Technology, Programming ,Law" />
+		<meta name="google-site-verification" content="qiRj6AwPISw2aFIJYUAMZoKsozaaVOpa87hbH0pjKLk" />
+		<!-- Title of Site -->
+	
+		 
+	
+	</head>
+
+
+
+
+
+
 	<div class="header-menu">
 		<div class="container">
 			<div class="row align-items-center">
