head tag added to app comp also

--- a/hukuki/src/app/app.component.html
+++ b/hukuki/src/app/app.component.html
@@ -1,4 +1,17 @@
+<head>
+    <meta charset="utf-8">
+    <title>Safa Hukuk</title>
+    <meta name="description" content="Safa Hukuk" />
+      <base href="/">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="keywords" content="Creative, Digital, multipage, landing, Technology, Programming ,Law" />
+    <meta name="google-site-verification" content="qiRj6AwPISw2aFIJYUAMZoKsozaaVOpa87hbH0pjKLk" />
+    <!-- Title of Site -->
 
+     
+
+</head>
  
 
 <router-outlet></router-outlet>
